[project]
name = "hd-auto-test"
version = "0.1.0"
description = "Тестовое задание для HD тестировщиков"
authors = ["Daniil Myasnikov <d.myasnikov@skbkontur.ru>"]
readme = "../README.md"

[tool.pytest.ini_options]
addopts = "-ra -q ."

[tool.ruff]
line-length = 119
ignore-init-module-imports = true
output-format = "grouped"
show-fixes = true
target-version = "py311"
exclude = [".svn", "CVS", ".bzr", ".hg",".git", "__pycache__", ".tox", ".eggs", "*.egg", ".venv", "env", "venv", "build", "vendor"]

[tool.ruff.lint]
select = ["W", "E", "F", "I", "N", "DJ", "T20", "Q"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
install_types = true
non_interactive = true
no_implicit_optional = true
exclude = ["tests", "env", "venv", "vendor"]
